# cpp_brickgame

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile  main.cpp  main_cls.cpp
src/brick_game/inc/: defines.h
src/brick_game/snake/controller/: game_controller.cpp
src/brick_game/snake/controller/inc/: game_controller.h
src/brick_game/snake/model/: apple.cpp  game_model.cpp  snake.cpp
src/brick_game/snake/model/inc/: apple.h  game_model.h  position.h  snake.h
src/brick_game/tetris/: backend.cpp  fsm_t.cpp
src/brick_game/tetris/inc/: backend.h  fsm_t.h
src/gui/cli/: frontend.cpp  menu.cpp  snake_game_loop.cpp  tetris_game_loop.cpp
src/gui/cli/inc/: frontend.h
src/gui/desktop/: game_view.cpp  gtk_snake_view.cpp  gtk_tetris_view.cpp
src/gui/desktop/inc/: game_view.h
src/tests/: tests.cpp
